# today

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
.github/workflows  /: debian.yaml
src/: cli.rs  lib.rs  main.rs  markdown.rs  task.rs  weather.rs
