[package]
name = "today"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version =  "0.12.15", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "fs", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
